[package]
authors = ["clux <sszynrae@gmail.com>"]
name = "rustlscrate"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["client"] }
hyper-rustls = "0.27.5"
hyper-util = "0.1.10"
rustls = "0.23"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
